# rust-web

./: Cargo.toml  application.toml  output.db  test.http
src/: database.rs  logger.rs  main.rs
src/api/: auth.rs  mod.rs  user.rs
src/app/: auth.rs  error.rs  extract.rs  latency.rs  middleware.rs  mod.rs  params.rs  response.rs  server.rs  util.rs  validation.rs
src/config/: auth.rs  database.rs  mod.rs  server.rs  ssl.rs
src/entity/: gender.rs  mod.rs  sys_user.rs
src/web/: mod.rs
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.tsx  LoadingFallback.tsx  Login.tsx  dashboard.tsx  index.css  main.tsx
web/src/api/: auth.ts  http.ts  query.ts  user.ts
web/src/block/Components/AnimatedList/: AnimatedList.tsx
web/src/block/Components/MagicBento/: MagicBento.tsx
web/src/components/: app-sidebar.tsx
