[package]
name = "rust-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros"] }
axum-valid = { version = "0.24.0", features = ["full_validator"] }
config = { version = "0.15.13", features = ["toml"] }
jsonwebtoken = "9.3.1"
regex = "1.11.1"
sea-orm = { version = "1.1.14", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "limit", "normalize-path", "timeout", "trace"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
uuid = { version = "1.17.0", features = ["v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
